<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5CFCC"
    tools:context=".register">

    <androidx.cardview.widget.CardView
        android:layout_width="356dp"
        android:layout_height="373dp"
        android:layout_marginTop="31dp"
        app:cardBackgroundColor="#5C8C4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="25dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:password="false"
                android:text="@string/enter_your_email"
                android:textColor="#012303"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center|left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="#E1E1E1"
                android:textColorHighlight="@color/rectangle_39_color"
                android:textColorLink="@color/rectangle_39_color"
                android:textSize="16sp"
                tools:ignore="DuplicateClickableBoundsCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:paddingLeft="0dp"
                android:paddingTop="00dp"
                android:text="Enter your Password"
                android:textColor="#012302"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center|left"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:password="true"
                android:textColor="#C6C6C6"
                android:textColorHighlight="@color/rectangle_39_color"
                android:textColorLink="@color/rectangle_39_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/black"
                android:elevation="20dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="SIGN UP"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Textsign"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="#5C8C4F"
                android:text="Already have an account? login"
                android:textColor="#350101"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>